@@ -45,11 +45,11 @@
 #include <assert.h>
 
 static const GLfloat vs[4] = {0, 0, 0, 1};
-static const GLfloat v[4] = {0.10, 0.10, 0.40, 1.};
+static const GLfloat v[4] = {0.20, 0.20, 0.40, 1.};
 static const GLfloat vt[4] = {1.00, 1.00, 1.00, 1.};
 
-static const GLfloat HAND_ADC[4] = {0.05, 0.05, 0.10, 1};
-static const GLfloat HAND_SC[4] = {0.40, 0.40, 0.40, 1};
+static const GLfloat HAND_ADC[4] = {0.05, 0.05, 0.05, 1};
+static const GLfloat HAND_SC[4] = {0.20, 0.20, 0.20, 1};
 static const GLfloat HAND_SR = 16;
 
 #ifndef DISABLE_LOCAL_VIEWER
@@ -381,10 +381,12 @@ simple_set_prop(const char *name, const char *value)
   return -1;
 }
 
-static const GLfloat LIGHT0_POSITION[] = {-200, 200, 200, 0};
+static const GLfloat LIGHT0_AMBIENT[] = {0.10, 0.10, 0.10, 1};
 static const GLfloat LIGHT0_INTENSITY[] = {0.80, 0.80, 0.80, 1};
-static const GLfloat LIGHT1_POSITION[] = {200, 200, 0, 0};
+static const GLfloat LIGHT0_POSITION[] = {-200, 200, 200, 0};
+static const GLfloat LIGHT1_AMBIENT[] = {0.10, 0.10, 0.10, 1};
 static const GLfloat LIGHT1_INTENSITY[] = {0.60, 0.60, 0.60, 1};
+static const GLfloat LIGHT1_POSITION[] = {200, 200, 0, 0};
 
 int
 simple_init(void)
@@ -404,16 +406,17 @@ simple_init(void)
 #endif
   glEnable (GL_CULL_FACE);
 
-  glEnable (GL_LIGHTING);
-  glEnable (GL_LIGHT0);
-  glLightfv (GL_LIGHT0, GL_POSITION, LIGHT0_POSITION);
-  glLightfv (GL_LIGHT0, GL_DIFFUSE, LIGHT0_INTENSITY);
-  glLightfv (GL_LIGHT0, GL_SPECULAR, LIGHT0_INTENSITY);
-  glEnable (GL_LIGHT1);
-  glLightfv (GL_LIGHT1, GL_POSITION, LIGHT1_POSITION);
-  glLightfv (GL_LIGHT1, GL_DIFFUSE, LIGHT1_INTENSITY);
-  glLightfv (GL_LIGHT1, GL_SPECULAR, LIGHT1_INTENSITY);
+  glEnable(GL_LIGHTING);
+  glEnable(GL_LIGHT0);
+  glLightfv(GL_LIGHT0, GL_AMBIENT, LIGHT0_AMBIENT);
+  glLightfv(GL_LIGHT0, GL_DIFFUSE, LIGHT0_INTENSITY);
+  glLightfv(GL_LIGHT0, GL_SPECULAR, LIGHT0_INTENSITY);
+  glLightfv(GL_LIGHT0, GL_POSITION, LIGHT0_POSITION);
+  glEnable(GL_LIGHT1);
+  glLightfv(GL_LIGHT1, GL_AMBIENT, LIGHT1_AMBIENT);
+  glLightfv(GL_LIGHT1, GL_DIFFUSE, LIGHT1_INTENSITY);
+  glLightfv(GL_LIGHT1, GL_SPECULAR, LIGHT1_INTENSITY);
+  glLightfv(GL_LIGHT1, GL_POSITION, LIGHT1_POSITION);
 
   return 0;
 }
-
