@@ -1,3 +1,8 @@
+2000-03-06  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
+
+	* lib/simple.c: Modify the material parameters.
+	(simple_init): Set the ambient parameters for lights.
+
 2000-03-04  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
 	* bin/Makefile.am (EXTRA_DIST): Add options-0.dtd.
